--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@ body
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+a{
+  text-decoration: "inherit";  
+}
 .app {
   display: flex;
   position: relative;
